--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-  %body
+  %body{:'data-facebook-app-id' => ENV['FACEBOOK_APP_ID']}
     %header
       = render 'layouts/navigation'
     %main{:role => "main"}
