Hidden navigation links

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,6 +8,6 @@
         %span.icon-bar
         %span.icon-bar
       = link_to 'Data Explorer', root_path, class: 'navbar-brand'
-    .collapse.navbar-collapse
-      %ul.nav.navbar-nav
-        = render 'layouts/navigation_links'
+    -# .collapse.navbar-collapse
+    -#   %ul.nav.navbar-nav
+    -#     = render 'layouts/navigation_links'
